--- a/template/index.html
+++ b/template/index.html
@@ -122,7 +122,7 @@
             <select id="model_select" name="model_select">
                 <option value="model1">Cracking Tolerance Index</option>
                 <option value="model2">Permanent Strain </option>
-                
+                <option value="model3" || value="model4"> ITS Dry, ITS Wet And TSR  </option>
                 
             </select><br><br>
             <button type="submit">Continue</button>
