--- a/template/index.html
+++ b/template/index.html
@@ -121,8 +121,8 @@
             <label for="model_select">Select TEST:</label>
             <select id="model_select" name="model_select">
                 <option value="model1">Cracking Tolerance Index</option>
-                <option value="model2">Permanent Strain </option>
-                <option value="model3" || value="model4"> ITS Dry, ITS Wet And TSR  </option>
+                <!-- <option value="model2">Permanent Strain </option>
+                <option value="model3" || value="model4"> ITS Dry, ITS Wet And TSR  </option> -->
                 
             </select><br><br>
             <button type="submit">Continue</button>
