--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,33 @@
 /* Background styles */
+:root {
+    --primary-color: #2c3e50;
+    --secondary-color: #3498db;
+    --accent-color: #e74c3c;
+    --light-bg: #f8f9fa;
+}
+.top-bar {
+    background-color: var(--primary-color);
+    padding: 15px 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+.logo {
+    height: 50px;
+    margin-left: auto; /* Move logo to the right */
+}
+.footer {
+    flex-shrink: 0;
+    background-color: var(--primary-color);
+    color: white;
+    padding:0cap;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 body {
     background-image: url('static/cracking-01.jpeg'); 
     background-size: cover;
@@ -89,7 +118,4 @@ button:hover {
 }
 
 
-header {
-    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
-    padding: 20px 0;
-}
+
