--- a/template/input_page1.html
+++ b/template/input_page1.html
@@ -195,23 +195,23 @@
             <form method="POST">
                 <div class="form-group">
                     <label for="Aggregate"><b>Gradation</b></label>
-                    <input type="number" step="0.01" name="Aggregate" placeholder="Gradation (NMAS)" required>
+                    <input type="number" step="0.01" name="Aggregate" placeholder="Gradation (NMAS) between 19mm and 26.5mm" required>
                 </div>
                 <div class="form-group">
                     <label for="source"><b>Aggregate Source</b></label>
-                    <input type="number" step="0.01" name="source" placeholder="Aggregate Source (Abrasion Value)" required>
+                    <input type="number" step="0.01" name="source" placeholder="Aggregate Source (Specific Gravity) ranging from 2.5 to 2.7" required>
                 </div>
                 <div class="form-group">
                     <label for="viscosity"><b>Binder</b></label>
-                    <input type="number" step="0.01" name="viscosity" placeholder="Binder (ZSV)" required>
+                    <input type="number" step="0.01" name="viscosity" placeholder="Binder (ZSV) within range of 800 to 3500 Poise" required>
                 </div>
                 <div class="form-group">
                     <label for="DAG"><b>DAG</b></label>
-                    <input type="number" step="0.01" name="DAG" placeholder="DAG (Surface Area)" required>
+                    <input type="number" step="0.01" name="DAG" placeholder="DAG (Surface Area) between 4.5 and 6.5" required>
                 </div>
                 <div class="form-group">
                     <label for="air_voids"><b>Air Voids</b></label>
-                    <input type="number" step="0.01" name="air_voids" placeholder="Air Voids" required>
+                    <input type="number" step="0.01" name="air_voids" placeholder="Air Voids between 1 and 8" required>
                 </div>
                 <button type="submit">Submit</button>
             </form>
