--- a/template/input_page1.html
+++ b/template/input_page1.html
@@ -181,7 +181,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="https://virtual-transportation-lab.onrender.com/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/faq">FAQ</a></li>
                 <li><a href="/useful-information">Useful Information</a></li>
@@ -199,11 +199,11 @@
                 </div>
                 <div class="form-group">
                     <label for="source"><b>Aggregate Source</b></label>
-                    <input type="number" step="0.01" name="source" placeholder="Aggregate Source (Specific Gravity) ranging from 2.5 to 2.7" required>
+                    <input type="number" step="0.01" name="source" placeholder="Aggregate Source (Abrasion Value) ranging from 17 to 24" required>
                 </div>
                 <div class="form-group">
                     <label for="viscosity"><b>Binder</b></label>
-                    <input type="number" step="0.01" name="viscosity" placeholder="Binder (ZSV) within range of 800 to 3500 Poise" required>
+                    <input type="number" step="0.01" name="viscosity" placeholder="Binder (ZSV) within range of 882 to 3321 Poise" required>
                 </div>
                 <div class="form-group">
                     <label for="DAG"><b>DAG</b></label>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="form-group">
                     <label for="air_voids"><b>Air Voids</b></label>
-                    <input type="number" step="0.01" name="air_voids" placeholder="Air Voids between 1 and 8" required>
+                    <input type="number" step="0.01" name="air_voids" placeholder="Air Voids between 2% and 7.5%" required>
                 </div>
                 <button type="submit">Submit</button>
             </form>
